--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "mysql2": "^3.1.1",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
