--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "cypress:open": "cypress open",
+    "cytest": "start-server-and-test dev 3000 cypress:open"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -33,9 +35,11 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.5.1",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "postcss": "^8.4.21",
+    "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.2.6"
   }
 }
